unpackaged/main/default/objects/ETT_Tread_Master__c/ETT_Tread_Master__c.object-meta.xml
<CustomObject>
    <label>Tread Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tread Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>