unpackaged/main/default/objects/ETT_Tread_Master__c/fields/Available_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Available_Stocks__c</fullName>
    <label>Available Stocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>