unpackaged/main/default/objects/ETT_Tread_Master__c/fields/ETT_Production_Areas__c.field-meta.xml
<CustomField>
    <fullName>ETT_Production_Areas__c</fullName>
    <label>Production Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buffing</fullName>
            </value>
            <value>
                <fullName>Tread Preparation</fullName>
            </value>
            <value>
                <fullName>Buliding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>