unpackaged/main/default/objects/ETT_Tread_Master__c/fields/ETT_Supplier__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>