unpackaged/main/default/objects/ETT_Tread_Master__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>