unpackaged/main/default/objects/ETT_Tread_Master__c/recordTypes/Cushion_Gum.recordType-meta.xml
<RecordType>
    <fullName>Cushion_Gum</fullName>
    <active>true</active>
    <description>Stock of Cushion gum</description>
    <label>Cushion Gum</label>
</RecordType>