unpackaged/main/default/objects/ETT_Tread_Master__c/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <label>Others</label>
</RecordType>