unpackaged/main/default/objects/ETT_Tread_Master__c/recordTypes/Treads.recordType-meta.xml
<RecordType>
    <fullName>Treads</fullName>
    <active>true</active>
    <label>Treads</label>
</RecordType>